@@ -51,6 +51,7 @@ Changes from 0.13.0
      a for loop
    * `else` clauses in `for` and `while` are recognized more reliably
    * Argument destructuring no longer interferes with function docstrings.
+   * Multiple expressions are now allowed in `try`
 
    [ Misc. Improvements ]
    * `read`, `read_str`, and `eval` are exposed and documented as top-level
